# ai-guardian

./: .aiguardignore.toml  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  CHANGELOG.md  CHANGELOG.md.bak  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTOR_WORKFLOW_ANALYSIS.md  DIRECTORY_BLOCKING.md  IMMUTABLE_PATTERNS_REVIEW.md  ISSUE_105_ANALYSIS.md  LICENSE  Makefile  NOTICE  PATTERN_SERVER_IMPLEMENTATION_PLAN.md  README.md  RELEASING.md  ai-guardian-example.json  config-example.json  install.ps1  install.sh  pyproject.toml  test_ai-guardian.sh  test_directory_blocking.py  uninstall.sh  versions.json
.ai-guardian/: ai-guardian.json
.github/: CODEOWNERS  dependabot.yml
.github/DISCUSSION_TEMPLATE/: bug-reports.yml  ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  pattern-enhancement.md
.github/workflows/: build-container.yml  build-wheel.yml  integration-tests.yml  lint.yml  parser-compat.yml  pattern-research-reminder.yml  publish-test.yml  publish.yml  release-readiness.yml  scenario-tests.yml  smoke-tests.yml  tag-monitor.yml  test.yml
container/: Dockerfile  Dockerfile.test  README.md  entrypoint.sh  run-scenarios.sh  run.sh
docs/: AGENT_SUPPORT.md  AIDER.md  AIDERDESK.md  ANNOTATIONS.md  CLAUDE_CODE_HOOKS_LIMITATION.md  CONFIGURATION.md  CONSOLE.md  COOKBOOK.md  CREATE_MULTI_ENGINE_ISSUE.md  CURSOR_TESTING_RESULTS.md  DAEMON.md  DEVELOPER_GUIDE.md  GITHUB_COPILOT.md  HOOKS.md  HOOK_ORDERING.md  MCP_SERVER.md  ML_ENGINE_SUPPORT.md  MULTI_DAEMON_TRAY.md  MULTI_ENGINE_SUPPORT.md  PATTERN_SERVER.md  PATTERN_SERVER_MIGRATION_GUIDE.md  PERMISSIONS_COMPARISON.md  PRE_COMMIT.md  README.md  SCANNER_INSTALLATION.md  SDK.md  SECRET_REDACTION.md  SECRET_SCANNING.md  SECRET_SCANNING_VS_PATTERN_SERVER.md  SECURITY_DESIGN.md  SSRF_PROTECTION.md  TOML_PATTERNS.md  TOOL_POLICY.md  TROUBLESHOOTING.md  TUI.md  VIOLATION_LOGGING.md  hook-flow-diagram.md  hook-flow-diagram.mmd  kubernetes.md  notebooklm-export.md
docs/research/: open-prompt-injection-analysis.md
docs/security/: CONTEXT_POISONING.md  CREDENTIAL_EXFILTRATION.md  DIRECTORY_RULES.md  IMAGE_SCANNING.md  PROMPT_INJECTION.md  README.md  SECRET_REDACTION.md  SECRET_SCANNING.md  SSRF_PROTECTION.md  UNICODE_ATTACKS.md
examples/: ignore-tools-config.json  secret-scanning-ignore-config.json
examples/aider/: .aider.conf.yml  .pre-commit-config.yaml  pre-commit-hook.sh
examples/pattern-server/: README.md  config-exfil-patterns.toml  secrets-patterns.toml  ssrf-patterns.toml  unicode-patterns.toml
images/: ai-guardian.icns
research/: SUMMARY.md  aider-format.md  github-copilot-format.md  vscode-format.md
scripts/: check_parser_compat.py  check_scanner_versions.py  install  unittest
src/ai_guardian/: __init__.py  __main__.py  aiguardignore.py  allowlist_utils.py  annotations.py  ask_mode.py  ast_scanner.py  audit.py  bandit_scanner.py  canary_detection.py  cli.py  cli_handlers.py  config_display.py  config_inspector.py  config_loaders.py  config_manager.py  config_scanner.py  config_utils.py  config_writer.py  constants.py  context_poisoning.py  desktop_utils.py  diff_provider.py  directory_rule_generator.py  doctor.py  dummy_agent.py  engine_tester.py  exfil_detection.py  gitleaks_config.py  help_content.py  hook_context.py  hook_processing.py  image_scanner.py  language_patterns.py  latency_logger.py  logging_utils.py  mcp_audit.py  mcp_server.py  metrics.py  ml_detection.py  (+38 more)
support/: Dockerfile  Dockerfile.test  README.md  entrypoint.sh  run.sh
support/scenarios/: ask-dialog.yaml  basic-secret.yaml  pii-detection.yaml  tool-policy.yaml
templates/: .pre-commit-config.yaml  pre-commit.sh
tests/: __init__.py  benchmark_phases.py  conftest.py  test_ai_guardian.py  test_bash_bypass.py  test_bash_directory_rules.py  test_bash_heredoc.py  test_combined_wildcards.py  test_config_error_handling.py  test_config_scanner.py  test_config_utils.py  test_config_validation.py  test_contributor_workflow.py  test_directory_blocking.py  test_directory_exclusions.py  test_directory_rules.py  test_directory_rules_log_mode_bug.py  test_e2e_workflow.py  test_enforcement_levels.py  test_engine_builder.py  test_error_messages.py  test_hook_processing.py  test_immutable_configs.py  test_install_script.py  test_integration_local_remote_configs.py  test_json_schema.py  test_maintainer_bypass.py  test_pattern_server_definitions.py  test_pattern_server_integration.py  test_pattern_server_warnings.py  test_posttooluse_mcp.py  test_powershell_protection.py  test_pretooluse_no_auto_approve.py  test_prompt_injection.py  test_prompt_injection_heredoc.py  test_release_helper.py  test_remote_fetcher.py  test_remote_fetcher_local.py  test_sarif_formatter.py  test_scanner_engine_integration.py  (+14 more)
tests/fixtures/: ai_guardian_native_patterns.toml  attack_constants.py  mock_mcp_server.py  valid-config.json
tests/integration/: __init__.py  test_contributor_workflow.py  test_e2e_workflow.py  test_integration_local_remote_configs.py  test_integration_mcp.py  test_multi_engine_strategy.py  test_pattern_server_integration.py  test_scanner_engine_integration.py
tests/unit/: __init__.py  test_ai_guardian.py  test_aiderdesk_support.py  test_aiderdesk_transcript.py  test_aiguardignore.py  test_aiguardignore_writer.py  test_allowlist_utils.py  test_annotations.py  test_ask_action.py  test_ask_forwarding.py  test_ast_scanner.py  test_audit.py  test_augment_support.py  test_auto_directory_rules.py  test_auto_setup.py  test_auto_start_daemon.py  test_bandit_scanner.py  test_base64_path_false_positive.py  test_bash_bypass.py  test_bash_directory_rules.py  test_bash_heredoc.py  test_block_reason_extraction.py  test_bundled_toml.py  test_cache_status.py  test_canary_detection.py  test_check_parser_compat.py  test_cli_console_tty.py  test_cli_handlers.py  test_cline_transcript.py  test_column_support.py  test_combined_wildcards.py  test_compliance_reporter.py  test_config_cache.py  test_config_display.py  test_config_effective.py  test_config_error_handling.py  test_config_scanner.py  test_config_scope.py  (+206 more)
tests/ux/: __init__.py  (+9 more)
(+344 files in other folders)
