[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-guardian"
version = "1.3.0-dev"
description = "AI IDE security hook: blocks directories, scans secrets, and protects AI interactions"
authors = [{name = "itdove team"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
  "textual>=0.47.0",
  "jsonschema>=4.0.0",
  "requests>=2.28.0",
  "tomli>=2.0.0; python_version < '3.11'",
  "pyyaml>=6.0.0",
]
keywords = ["ai", "security", "claude", "cursor", "secrets", "gitleaks", "hooks"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
skill-discovery = []

[project.urls]
"Homepage" = "https://github.com/itdove/ai-guardian"
"Bug Tracker" = "https://github.com/itdove/ai-guardian/issues"
"Source Code" = "https://github.com/itdove/ai-guardian"

[project.scripts]
ai-guardian = "ai_guardian.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_guardian"]

[tool.hatch.build.targets.wheel.force-include]
"images" = "ai_guardian/images"
"README.md" = "ai_guardian/README.md"
