[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-guardian"
version = "1.7.0-dev"
description = "AI IDE security hook: blocks directories, scans secrets, and protects AI interactions"
authors = [{name = "itdove team"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
  "textual>=0.47.0",
  "jsonschema>=4.0.0",
  "requests>=2.28.0",
  "tomli>=2.0.0; python_version < '3.11'",
  "pyyaml>=6.0.0",
  "tree-sitter>=0.25.0; python_version >= '3.10'",
  "tree-sitter-json>=0.24.0; python_version >= '3.10'",
  "pystray>=0.19.0",
  "Pillow>=9.0.0",
]
keywords = ["ai", "security", "claude", "cursor", "secrets", "gitleaks", "hooks"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
skill-discovery = []

[project.urls]
"Homepage" = "https://github.com/itdove/ai-guardian"
"Bug Tracker" = "https://github.com/itdove/ai-guardian/issues"
"Source Code" = "https://github.com/itdove/ai-guardian"

[project.scripts]
ai-guardian = "ai_guardian.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_guardian"]

[tool.hatch.build.targets.wheel.force-include]
"images" = "ai_guardian/images"
"README.md" = "ai_guardian/README.md"
"pyproject.toml" = "ai_guardian/pyproject.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "hermes: Hermes Security Framework validation tests",
    "benchmark: Performance benchmark tests",
]

[tool.coverage.run]
source = ["src/ai_guardian"]
omit = [
    # Console modules (separate from core security logic)
    "src/ai_guardian/tui/*",

    # Infrastructure/setup modules
    "src/ai_guardian/__main__.py",
    "src/ai_guardian/scanner.py",
    "src/ai_guardian/setup.py",

    # Config management (tested via integration tests)
    "src/ai_guardian/config_inspector.py",
    "src/ai_guardian/config_manager.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
precision = 0
show_missing = true
skip_covered = false

[tool.ai-guardian.scanners]
# Tested scanner versions (used as fallback when GitHub API unavailable)
# Update these when releasing new ai-guardian versions
gitleaks = "8.30.1"
betterleaks = "1.1.2"
leaktk = "0.2.10"
trufflehog = "3.88.0"
detect-secrets = "1.5.0"

[tool.ai-guardian.scanners.repos]
gitleaks = "gitleaks/gitleaks"
betterleaks = "betterleaks/betterleaks"
leaktk = "leaktk/leaktk"
trufflehog = "trufflesecurity/trufflehog"
detect-secrets = "Yelp/detect-secrets"

[tool.ai-guardian.scanners.pattern_servers]
leaktk = { url = "https://raw.githubusercontent.com", patterns_endpoint = "/leaktk/patterns/main/target/patterns/gitleaks/8.27.0" }
