[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-guardian"
version = "1.12.0-dev"
description = "AI IDE security hook: blocks directories, scans secrets, and protects AI interactions"
authors = [{name = "itdove team"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
  "textual>=0.47.0",
  "jsonschema>=4.0.0",
  "requests>=2.28.0",
  "tomli>=2.0.0; python_version < '3.11'",
  "tomli-w>=1.0.0",
  "pyyaml>=6.0.0",
  "tree-sitter>=0.25.0; python_version >= '3.10'",
  "tree-sitter-json>=0.24.0; python_version >= '3.10'",
  "tree-sitter-python>=0.23; python_version >= '3.10'",
  "tree-sitter-javascript>=0.23; python_version >= '3.10'",
  "tree-sitter-typescript>=0.23; python_version >= '3.10'",
  "tree-sitter-go>=0.23; python_version >= '3.10'",
  "tree-sitter-rust>=0.23; python_version >= '3.10'",
  "tree-sitter-java>=0.23; python_version >= '3.10'",
  "tree-sitter-ruby>=0.23; python_version >= '3.10'",
  "tree-sitter-c>=0.23; python_version >= '3.10'",
  "tree-sitter-cpp>=0.23; python_version >= '3.10'",
  "tree-sitter-bash>=0.23; python_version >= '3.10'",
  "pystray>=0.19.0",
  "Pillow>=9.0.0",
  "docker>=7.0,<9",
  "mcp>=1.10.0; python_version >= '3.10'",
  "rapidocr-onnxruntime>=1.4.0; python_version < '3.13'",
  "onnxruntime>=1.15.0",
  "nicegui>=3.0.0; python_version >= '3.10'",
  "tokenizers>=0.15.0; python_version >= '3.10'",
  "boto3>=1.28.0",
]
keywords = ["ai", "security", "claude", "cursor", "secrets", "gitleaks", "hooks"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
tray-linux = [
  "PyGObject>=3.42.0",
]
ml = []
dev = [
  "pytest>=8.4.2",
]

[project.urls]
"Homepage" = "https://github.com/itdove/ai-guardian"
"Bug Tracker" = "https://github.com/itdove/ai-guardian/issues"
"Source Code" = "https://github.com/itdove/ai-guardian"

[project.scripts]
ai-guardian = "ai_guardian.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_guardian"]

[tool.hatch.build.targets.wheel.force-include]
"images" = "ai_guardian/images"
"README.md" = "ai_guardian/README.md"
"pyproject.toml" = "ai_guardian/pyproject.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "hermes: Hermes Security Framework validation tests",
    "benchmark: Performance benchmark tests",
]

[tool.coverage.run]
source = ["src/ai_guardian"]
omit = [
    # Console modules (separate from core security logic)
    "src/ai_guardian/tui/*",
    "src/ai_guardian/web/*",

    # Infrastructure/setup modules
    "src/ai_guardian/__main__.py",
    "src/ai_guardian/scanner.py",
    "src/ai_guardian/setup.py",

    # Config management (tested via integration tests)
    "src/ai_guardian/config_inspector.py",
    "src/ai_guardian/config_manager.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
precision = 0
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
  "E402",   # module-level import not at top — used extensively for conditional/lazy imports
  "E501",   # line too long — handled by black; URLs and long strings can't be wrapped
  "E731",   # lambda assignment — used in test fixtures and callbacks
  "E741",   # ambiguous variable name (l, O, I) — too many false positives
  "F401",   # unused import — many re-exports and conditional imports
  "F811",   # redefined unused — test fixtures shadow intentionally
  "F841",   # local variable assigned but never used — common in tests (result = func())
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F821"]
"src/ai_guardian/hook_processing.py" = ["F821"]
"src/ai_guardian/cli_handlers.py" = ["F821"]
"src/ai_guardian/setup.py" = ["F821"]
"src/ai_guardian/tui/ask_dialog_textual.py" = ["F821"]
"src/ai_guardian/tui/violation_logging.py" = ["F821"]

[tool.ai-guardian.scanners]
# Tested scanner versions (used as fallback when GitHub API unavailable)
# Update these when releasing new ai-guardian versions
gitleaks = "8.30.1"
betterleaks = "1.3.1"
leaktk = "0.3.3"
trufflehog = "3.88.0"
detect-secrets = "1.5.0"

[tool.ai-guardian.scanners.repos]
gitleaks = "gitleaks/gitleaks"
betterleaks = "betterleaks/betterleaks"
leaktk = "leaktk/leaktk"
trufflehog = "trufflesecurity/trufflehog"
detect-secrets = "Yelp/detect-secrets"

[tool.ai-guardian.scanners.pattern_servers]
leaktk = { url = "https://raw.githubusercontent.com", patterns_endpoint = "/leaktk/patterns/main/target/patterns/gitleaks/8.27.0" }
